--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,6 +1,6 @@
 name: CI
 
-on: [push, pull_request]
+on: [push]
 
 jobs:
   tests:
@@ -12,12 +12,11 @@ jobs:
         with:
           python-version: "3.10"
 
-      - name: Install dependencies
+      - name: Install deps
         run: |
-          python -m pip install --upgrade pip
           pip install -r requirements.txt
           pip install pytest
 
-      - name: Run pytest   # ако тестовете липсват, командата ще мине и без тях
+      - name: Run pytest (skip if no tests)
         run: |
-          if test -d tests; then pytest -q; else echo "no tests folder"; fi
+          if [ -d tests ]; then pytest -q; else echo "no tests found"; fi
